# shopapi

./: .coverage  .env_example  .gitignore  Dockerfile  README.md  conftest.py  confuse.md  db.sqlite3  docker-compose-dev.yml  docker-compose.yml  endpoints.md  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  random33.py  requirements.txt  roadmap.md  schema.yml  tobedone.md
.github/workflows/: django.yml  python-app.yml
backends/: async_send_mail.py  pagination.py  permission.py
cart/: admin.py  models.py  permission.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_alter_cart_options.py  0002_alter_cart_user.py
cart/tests/: conftest.py  test_cart.py  test_cartitems.py
customer/: admin.py  models.py  serializer.py  urls.py  views.py
customer/migrations/: 0001_initial.py  0002_alter_address_customer.py  0002_profile_updated_at.py  0002_remove_address_address_type.py  0003_alter_address_user.py  0003_alter_membership_discount.py  0004_alter_customer_image_alter_membership_discount.py  0005_remove_address_country_alter_address_state.py
customer/tests/: test_address.py  test_payment.py  test_profile.py
data/: customer_address.sql  customer_customer.sql  order_order.sql  order_orderitem.sql  product_product.sql  product_review.sql
locustfiles/: browser_product.py
nginx/: nginx.conf
order/: admin.py  models.py  permission.py  permissison.py  serializer.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_alter_payment_order.py  0002_delete_payment.py  0002_order_billing_address_order_shipping_address.py  0003_alter_order_options_alter_orderitem_options_and_more.py
order/tests/: conftest.py  test_order.py  test_orderitem.py
payment/: admin.py  models.py  permission.py  serializer.py  urls.py  views.py
payment/migrations/: 0001_initial.py
payment/tests/: test_payment.py
product/: admin.py  filters.py  models.py  permissions.py  serializer.py  urls.py  utility.py  views.py
product/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0002_alter_product_category.py  0002_alter_product_image.py  0003_alter_productimage_product.py  0003_remove_product_image.py  0003_remove_product_slug.py  0004_product_image.py  0005_remove_product_image_productimage.py
shopapi/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
static/: staticfiles.json
user/: models.py  urls.py  views.py
(+10 files in other folders)
