[tool.poetry]
name = "shopapi"
version = "0.1.0"
description = "REST API for basic e-commerce platform"
authors = ["Aashish Chapain <ashishchapain86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
django-phonenumber-field = "^7.0.2"
django-countries = "^7.5.1"
phonenumbers = "^8.13.7"
drf-nested-routers = "^0.93.4"
django-debug-toolbar = "^4.0.0"
django-filter = "^23.1"
djoser = "^2.1.0"
djangorestframework-simplejwt = "^5.2.2"
drf-spectacular = "^0.26.2"
stripe = "^5.4.0"
django-cors-headers = "^3.14.0"
redis = "^4.5.4"
celery = "^5.2.7"
flower = "^1.2.0"
django-redis = "^5.2.0"
psycopg = {extras = ["binary"], version = "^3.1.8"}
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
pytest = "^7.3.0"
pytest-django = "^4.5.2"
model-bakery = "^1.11.0"
pytest-watch = "^4.2.0"
locust = "^2.15.1"
django-silk = "^5.0.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
